--- a/index.html
+++ b/index.html
@@ -4,26 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
     />
-    <link rel="stylesheet" href="./assets/style.css" />
   </head>
-  <body>
+  <body class="container">
     <header class="header">[Шапка страницы]</header>
     <main class="main">
       <article class="body">
-        <h2>[Основная часть]</h2>
-        <div class="wrap">
-          <section class="section">
-            <h3>[Еще 1]</h3>
-          </section>
-          <section class="section">
-            <h3>[Еще 2]</h3>
-          </section>
-        </div>
-        <section class="section">
+        <h2 class="title">[Основная часть]</h2>
+        <section class="section-1">
+          <h3>[Еще 1]</h3>
+        </section>
+        <section class="section-2">
+          <h3>[Еще 2]</h3>
+        </section>
+        <section class="section-3">
           <h3>[Еще 3]</h3>
         </section>
       </article>
